// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OSymbol should match snapshot 1`] = `
<MdPanoramaFishEye
  className="o animateO"
/>
`;

exports[`OSymbol should match snapshot 2`] = `
<MdPanoramaFishEye
  className="o"
/>
`;
